Added more structure

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,22 @@
 	<title>Pantry+</title>
 </head>
 <body>
-
+	<div class="container">
+		<header>
+			<h1>
+				Pantry+
+			</h1>
+			<nav>
+				<ul>
+					<a href="/cart">Cart</a>
+				</ul>
+			</nav>
+		</header>
+		<main>
+		</main>
+		<footer>
+			<small>Created by NAPOSCA</small>
+		</footer>
+	</div>
 </body>
 </html>
