--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,30 @@
 			</nav>
 		</header>
 		<main>
+			<section>
+				<h2>Personal Hygiene</h2>
+			</section>
+			<section>
+				<h2>Meal Starter</h2>
+			</section>
+			<section>
+				<h2>Dairy</h2>
+			</section>
+			<section>
+				<h2>Produce</h2>
+			</section>
+			<section>
+				<h2>Coupon</h2>
+			</section>
+			<section>
+				<h2>Bread</h2>
+			</section>
+			<section>
+				<h2>Goodies</h2>
+			</section>
+			<section>
+				<h2>Meat</h2>
+			</section>
 		</main>
 		<footer>
 			<small>Created by NAPOSCA</small>
