Added a layout.css

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Pantry+</title>
+	<link rel="stylesheet" type="text/css" href="../static/layout.css">
 </head>
 <body>
 	<div class="container">
