--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Pantry+ | Cart</title>
+	<link rel="stylesheet" type="text/css" href="../static/layout.css">
 </head>
 <body>
 
