Added category class to each category section

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,28 +17,28 @@
 			</nav>
 		</header>
 		<main>
-			<section>
+			<section class="category">
 				<h2>Personal Hygiene</h2>
 			</section>
-			<section>
+			<section class="category">
 				<h2>Meal Starter</h2>
 			</section>
-			<section>
+			<section class="category">
 				<h2>Dairy</h2>
 			</section>
-			<section>
+			<section class="category">
 				<h2>Produce</h2>
 			</section>
-			<section>
+			<section class="category">
 				<h2>Coupon</h2>
 			</section>
-			<section>
+			<section class="category">
 				<h2>Bread</h2>
 			</section>
-			<section>
+			<section class="category">
 				<h2>Goodies</h2>
 			</section>
-			<section>
+			<section class="category">
 				<h2>Meat</h2>
 			</section>
 		</main>
