Displayed categories as a flex column

--- a/src/main/resources/static/layout.css
+++ b/src/main/resources/static/layout.css
@@ -15,7 +15,10 @@ header {
 	justify-content: space-around;
 }
 
-main {}
+main {
+	display: flex;
+	flex-direction: column;
+}
 
 footer {
 	display: flex;
