made categories look good

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Pantry+</title>
 	<link rel="stylesheet" type="text/css" href="../static/layout.css">
+	<link rel="stylesheet" type="text/css" href="../static/style.css">
 </head>
 <body>
 	<div class="container">
