--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Pantry+</title>
-	<link rel="stylesheet" type="text/css" href="../static/layout.css">
-	<link rel="stylesheet" type="text/css" href="../static/style.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/layout.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
 <body>
 	<div class="container">
@@ -18,30 +18,56 @@
 			</nav>
 		</header>
 		<main>
-			<section class="category">
-				<h2>Personal Hygiene</h2>
-			</section>
-			<section class="category">
-				<h2>Meal Starter</h2>
-			</section>
-			<section class="category">
-				<h2>Dairy</h2>
-			</section>
-			<section class="category">
-				<h2>Produce</h2>
-			</section>
-			<section class="category">
-				<h2>Coupon</h2>
-			</section>
-			<section class="category">
-				<h2>Bread</h2>
-			</section>
-			<section class="category">
-				<h2>Goodies</h2>
-			</section>
-			<section class="category">
-				<h2>Meat</h2>
-			</section>
+			<div class="category-items">
+				<section class="category">
+					<h2>Personal Hygiene</h2>
+				</section>
+				<ul class="items">
+					<li>Soap</li>
+					<li>Shampoo</li>
+					<li>Three-in-one</li>
+				</ul>
+			</div>
+			<div class="category-items">
+				<section class="category">
+					<h2>Meal Starter</h2>
+				</section>
+				<ul class="items">
+					<li>Soup recipe</li>
+					<li>Meatloaf recipe</li>
+					<li>Lunchables</li>
+				</ul>
+			</div>
+			<div class="category-items">
+				<section class="category">
+					<h2>Dairy</h2>
+				</section>
+			</div>
+			<div class="category-items">
+				<section class="category">
+					<h2>Produce</h2>
+				</section>
+			</div>
+			<div class="category-items">
+				<section class="category">
+					<h2>Coupon</h2>
+				</section>
+			</div>
+			<div class="category-items">
+				<section class="category">
+					<h2>Bread</h2>
+				</section>
+			</div>
+			<div class="category-items">
+				<section class="category">
+					<h2>Goodies</h2>
+				</section>
+			</div>
+			<div class="category-items">
+				<section class="category">
+					<h2>Meat</h2>
+				</section>
+			</div>
 		</main>
 		<footer>
 			<small>Created by NAPOSCA</small>
