Added item css class

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,9 +23,9 @@
 					<h2>Personal Hygiene</h2>
 				</section>
 				<ul class="items">
-					<li>Soap</li>
-					<li>Shampoo</li>
-					<li>Three-in-one</li>
+					<li class="item">Soap</li>
+					<li class="item">Shampoo</li>
+					<li class="item">Three-in-one</li>
 				</ul>
 			</div>
 			<div class="category-items">
@@ -33,9 +33,9 @@
 					<h2>Meal Starter</h2>
 				</section>
 				<ul class="items">
-					<li>Soup recipe</li>
-					<li>Meatloaf recipe</li>
-					<li>Lunchables</li>
+					<li class="item">Soup recipe</li>
+					<li class="item">Meatloaf recipe</li>
+					<li class="item">Lunchables</li>
 				</ul>
 			</div>
 			<div class="category-items">
