Added link to animation

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
 	<title>Pantry+</title>
 	<link rel="stylesheet" type="text/css" href="../static/css/layout.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/animation.css">
 </head>
 <body>
 	<div class="container">
@@ -22,7 +23,7 @@
 				<section class="category">
 					<h2>Personal Hygiene</h2>
 				</section>
-				<ul class="items">
+				<ul class="items visible">
 					<li class="item">Soap</li>
 					<li class="item">Shampoo</li>
 					<li class="item">Three-in-one</li>
@@ -32,7 +33,7 @@
 				<section class="category">
 					<h2>Meal Starter</h2>
 				</section>
-				<ul class="items">
+				<ul class="items hidden">
 					<li class="item">Soup recipe</li>
 					<li class="item">Meatloaf recipe</li>
 					<li class="item">Lunchables</li>
