Added initialize to page onload

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="../static/css/layout.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/animation.css">
+	<script type="text/javascript" src="../static/js/shopping.js"></script>
 </head>
-<body>
+<body onload="initialize()">
 	<div class="container">
 		<header>
 			<h1>
