--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Pantry+</title>
-	<link rel="stylesheet" type="text/css" href="../static/layout.css">
-	<link rel="stylesheet" type="text/css" href="../static/style.css">
+	<link rel="stylesheet" type="text/css" href="../static/layout.css"></link>
+	<link rel="stylesheet" type="text/css" href="../static/style.css"></link>
 </head>
 <body>
 	<div class="container">
