--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title>Pantry+</title>
-	<link rel="stylesheet" type="text/css" href="../static/layout.css"></link>
-	<link rel="stylesheet" type="text/css" href="../static/style.css"></link>
+	<link rel="stylesheet" type="text/css" href="../static/css/layout.css"/>
+	<link rel="stylesheet" type="text/css" href="../static/css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="../static/css/animation.css"/>
+	<script type="text/javascript" src="../static/js/shopping.js"></script>
 </head>
-<body>
+<body onload="initialize()">
 	<div class="container">
 		<header>
 			<h1>
