Changed format to work with spring

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Pantry+</title>
-	<link rel="stylesheet" type="text/css" href="../static/css/layout.css"/>
-	<link rel="stylesheet" type="text/css" href="../static/css/style.css"/>
-	<link rel="stylesheet" type="text/css" href="../static/css/animation.css"/>
-	<script type="text/javascript" src="../static/js/shopping.js"></script>
+	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/animation.css"/>
+	<script type="text/javascript" src="/js/shopping.js"></script>
 </head>
 <body onload="initialize()">
 	<div class="container">
