Added styling to product items

--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -25,3 +25,12 @@ footer {
 	justify-content: center;
 	align-items: center;
 }
+
+li.item {
+	display: flex;
+	justify-content: space-between;
+}
+
+li.item button {
+	margin-right: 18rem;
+}
