--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -31,6 +31,11 @@ li.item {
 	justify-content: space-between;
 }
 
-li.item button {
+/*li.item button {
+	margin-right: 18rem;
+}*/
+
+div.interface {
+	display: flex;
 	margin-right: 18rem;
 }
