--- a/src/main/resources/static/css/animation.css
+++ b/src/main/resources/static/css/animation.css
@@ -1,4 +1,19 @@
+.item {
+	transition-duration: 0.5s;
+}
+
 .hidden .item {
+	height: 0;
+	padding: 0;
+	font-size: 0;
+	margin: 0;
+	border: none;
+}
+
+.hidden .item > * {
 	display: none;
 }
-.visible .item {}
+
+.visible .item {
+	height: 1.5rem;
+}
