--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -6,21 +6,25 @@
 div.container {
 	display: grid;
 	grid-template-rows: min-content auto 2rem;
+	grid-template-columns: 1fr 5fr 1fr;
 	height: 100vh;
 	grid-gap: 1rem;
 }
 
 header {
+	grid-column: 2;
 	display: flex;
 	justify-content: space-around;
 }
 
 main {
+	grid-column: 2;
 	display: flex;
 	flex-direction: column;
 }
 
 footer {
+	grid-column: 2;
 	display: flex;
 	justify-content: center;
 	align-items: center;
