added some photos

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,6 +27,7 @@
 				<ul class="items hidden">
 					<li class="item" th:each="product : ${category.products}">
 						<h3 th:text="${product.name}"/>
+						<img class="product_image" th:src="${product.image}"/>
 						<div th:id="'product-'+${product.id}" class="interface">
 							<button class="add" th:value="${product.id}">+</button>
 							<p th:text="${cart.getLineItemQuantityByProductId(product.id)}"></p>
