--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/animation.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/slide-toggle.css"/>
 	<script type="text/javascript" src="/js/shopping.js"></script>
 </head>
 <body onload="initialize()">
