Added slide toggle to dichotomous products

--- a/src/main/resources/templates/fragments/interfaces.html
+++ b/src/main/resources/templates/fragments/interfaces.html
@@ -1,4 +1,9 @@
-<div class="dichotomous interface">dichotomous</div>
+<div class="dichotomous interface">
+	<label class="switch switch_type1" role="switch">
+		<input type="checkbox" class="switch__toggle"/>
+		<span class="switch__label"></span>
+	</label>
+</div>
 <div class="meat interface">
 	<button class="add" th:value="${product.id}">+</button>
 	<p>
