added form action

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Welcome to BSFP</title>
 </head>
 <body>
-
+<div class="container">
+	<form action="/user-creation">
+		<input type="submit"/>
+	</form> 
+</div>
 </body>
 </html>
