--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -4,24 +4,40 @@
 	<title>Welcome to BSFP</title>
 </head>
 <body>
-<div class="container">
-	<form action="/user-creation">
-		<p>Please select your total family size:</p>
-		<select name="family-size">
-			<option value="1">1</option>
-			<option value="2">2</option>
-			<option value="3">3</option>
-			<option value="4">4</option>
-			<option value="5">5</option>
-			<option value="6">6</option>
-			<option value="7">7</option>
-			<option value="8">8</option>
-			<option value="9">9</option>
-			<option value="10">10+</option>
-		</select>
+	<div class="container">
+		<form action="/user-creation">
+			<p>Please select your total family size:</p>
+			<select name="family-size">
+				<option selected="true" disabled="true" hidden="true">Select...</option>
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+				<option value="4">4</option>
+				<option value="5">5</option>
+				<option value="6">6</option>
+				<option value="7">7</option>
+				<option value="8">8</option>
+				<option value="9">9</option>
+				<option value="10">10+</option>
+			</select>
 
-		<input type="submit"/>
-	</form> 
-</div>
+			<p>Please select how many children between the ages of x and y you have:</p>
+			<select name="schoolkids-count">
+				<option selected="true" disabled="true" hidden="true">Select...</option>
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+				<option value="4">4</option>
+				<option value="5">5</option>
+				<option value="6">6</option>
+				<option value="7">7</option>
+				<option value="8">8</option>
+				<option value="9">9</option>
+				<option value="10">10+</option>
+			</select>
+
+			<input type="submit"/>
+		</form> 
+	</div>
 </body>
 </html>
