added pickup date and moved submit button

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -50,7 +50,16 @@
 			<p>Do you have any children below the age of x?</p>
 			<input type="checkbox" name="infants" value="true"/>
 
-			<input type="submit"/>
+			<p>Please choose a pick up date:</p>
+			<select name="pick-up-date">
+				<option selected="true" disabled="true" hidden="true">Select...</option>
+				<option value="1">Date 1</option>
+				<option value="2">Date 2</option>
+				<option value="3">Date 3</option>
+				<option value="4">Date 4</option>
+			</select>	
+				
+			<p><input type="submit"/></p>
 		</form> 
 	</div>
 </body>
