Used actual zip codes in the form

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -10,11 +10,11 @@
 			<p>What is your zip code?</p>
 			<select name="zip-code">
 				<option selected="true" disabled="true" hidden="true">Select...</option>
-				<option value="1">zip code 1</option>
-				<option value="2">zip code 2</option>
-				<option value="3">zip code 3</option>
-				<option value="4">zip code 4</option>
-				<option value="5">zip code 5</option>
+				<option value="1">43203</option>
+				<option value="2">43205</option>
+				<option value="3">43209</option>
+				<option value="4">43213</option>
+				<option value="5">43215</option>
 			</select>
 
 			<p>Please select your total family size:</p>
