setting up to start adding tests

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -18,7 +18,7 @@
 			</select>
 
 			<p>Please select your total family size:</p>
-			<select name="family-size">
+			<select name="familySize">
 				<option selected="true" disabled="true" hidden="true">Select...</option>
 				<option value="1">1</option>
 				<option value="2">2</option>
@@ -33,7 +33,7 @@
 			</select>
 
 			<p>Please select how many children between the ages of x and y you have:</p>
-			<select name="schoolkids-count">
+			<select name="schoolkidsCount">
 				<option selected="true" disabled="true" hidden="true">Select...</option>
 				<option value="1">1</option>
 				<option value="2">2</option>
