--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Pantry+ | Cart</title>
+	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
+	<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
 	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
 </head>
 <body>
