--- a/src/main/resources/templates/shopping.html
+++ b/src/main/resources/templates/shopping.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/animation.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/slide-toggle.css"/>
+	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
+	<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
 	<script type="text/javascript" src="/js/shopping.js"></script>
 </head>
 <body onload="initialize()">
