--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+		<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
+		<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
 	<title>Welcome to BSFP</title>
 </head>
 <body>
