completed form and fixed other stuff

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div class="container">
-		<form action="/user-creation">
+		<form action="/user-form">
 
 			<p>What is your zip code?</p>
 			<select name="zipCode">
