Changed name of index to shopping in th:replace

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -30,7 +30,7 @@
 				</tr>
 			</table>
 		</main>
-		<footer th:replace="index :: footer"/>
+		<footer th:replace="shopping :: footer"/>
 	</div>
 </body>
 </html>
