The cart links back to the correct shopping view

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -14,7 +14,7 @@
 			</h1>
 			<nav>
 				<ul>
-					<a href="/">Shopping</a>
+					<a th:href="'/shopping?cartId='+${cart.getId()}">Shopping</a>
 				</ul>
 			</nav>
 		</header>
