The shopping view links to the correct cart

--- a/src/main/resources/templates/shopping.html
+++ b/src/main/resources/templates/shopping.html
@@ -18,7 +18,7 @@
 			</h1>
 			<nav>
 				<ul>
-					<a href="/cart">Cart</a>
+					<a th:href="'/carts/' + ${cart.getId()}">Cart</a>
 				</ul>
 			</nav>
 		</header>
