added zero children

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -37,6 +37,7 @@
 			<p>Please select how many children between the ages of 5 and 17 you have:</p>
 			<select name="schoolkidsCount">
 				<option selected="true" disabled="true" hidden="true">Select...</option>
+				<option value="0">0</option>
 				<option value="1">1</option>
 				<option value="2">2</option>
 				<option value="3">3</option>
