--- a/src/main/resources/templates/shopping.html
+++ b/src/main/resources/templates/shopping.html
@@ -9,6 +9,12 @@
 	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
 	<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
 	<script type="text/javascript" src="/js/shopping.js"></script>
+	<script th:inline="javascript">
+		/*<![CDATA[*/
+		const cartId = /*[[${cart.id}]]*/;
+		console.log(cartId);
+		/*]]>*/
+	</script>
 </head>
 <body onload="initialize()">
 	<div class="container">
