updated wording on html form and added extra option to zip code list

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -9,7 +9,7 @@
 	<div class="container">
 		<form action="/user-form">
 
-			<p>What is your zip code?</p>
+			<p>Please select your zip code:</p>
 			<select name="zipCode">
 				<option selected="true" disabled="true" hidden="true">Select...</option>
 				<option value="43203">43203</option>
@@ -17,6 +17,7 @@
 				<option value="43209">43209</option>
 				<option value="43213">43213</option>
 				<option value="43215">43215</option>
+				<option value="Partnership">I am a partner</option>
 			</select>
 
 			<p>Please select your total family size:</p>
@@ -52,7 +53,7 @@
 			<p>Do you have any children below the age of 4?</p>
 			<input type="checkbox" name="infants" value="true"/>
 
-			<p>Please choose a pick up date:</p>
+			<p>Please select a pick up date:</p>
 			<select name="pickUpDate">
 				<option selected="true" disabled="true" hidden="true">Select...</option>
 				<option value="2018-04-17">04/17/2018</option>
