Put required=true back onto zip code pulldown

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -10,8 +10,8 @@
 		<form action="/user-form">
 
 			<p>Please select your zip code:</p>
-			<select name="zipCode">
-				<option selected="true" disabled="true" hidden="true">Select...</option>
+			<select name="zipCode" required="true">
+				<option selected="true" disabled="true" hidden="true" value="">Select...</option>
 				<option value="43203">43203</option>
 				<option value="43205">43205</option>
 				<option value="43209">43209</option>
