checked that all form elements are required, added header and button text

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -8,6 +8,7 @@
 <body>
 	<div class="container">
 		<form action="/user-form">
+			<h1>Welcome to Broad Street Food Pantry</h1>
 
 			<p>Please select your zip code:</p>
 			<select name="zipCode" required="true">
@@ -60,7 +61,7 @@
 				<option value="2018-04-17">04/17/2018</option>
 			</select>	
 				
-			<p><input type="submit"/></p>
+			<p><input type="submit" value="Start Shopping"/></p>
 		</form> 
 	</div>
 </body>
