--- a/src/main/resources/templates/shopping.html
+++ b/src/main/resources/templates/shopping.html
@@ -36,7 +36,7 @@
 					</p>
 				</section>
 				<ul class="items hidden">
-					<li class="item" th:each="product : ${category.products}">
+					<li class="item" th:each="product : ${category.products}" th:unless="${product.name == 'Diapers' and cart.user.hasInfants() == false}">
 						<h3 th:text="${product.name}"/>
 						<img class="product-image" th:src="${product.image}"/>
 						<div th:id="'product-'+${product.id}" th:switch="true" class="switch">
