expand buttons are unstyled and ready

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8,6 +8,7 @@ section.category {
 	margin: var(--rounding-padding);
 	border-radius: var(--rounding-padding);
 	border: 1px solid black;
+	
 }
 
 main {
@@ -43,4 +44,10 @@ div.interface p {
 header nav {
 	display: flex;
 	align-items: center;
+}
+
+.indicator{
+	font-size: 2rem;
+	display: flex;
+	justify-content: flex-end;
 }
