--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
-		<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
+	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
+	<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
 	<title>Welcome to BSFP</title>
+	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
+	<script type="text/javascript" src="/js/user-form.js"></script>
 </head>
-<body>
+<body onload="initialize()">
 	<div class="container">
 		<form action="/user-form">
 			<h1>Welcome to Broad Street Food Pantry</h1>
@@ -38,7 +40,7 @@
 
 			<p>Please select how many children between the ages of 4 and 17 you have:</p>
 			<select class="schoolKidsMenu" name="schoolkidsCount" required="true">
-        		<option selected="true" disabled="true" hidden="true" value="">Select...</option>
+				<option selected="true" disabled="true" hidden="true" value="">Select...</option>
 				<option value="0">0</option>
 				<option value="1" class="hidden">1</option>
 				<option value="2" class="hidden">2</option>
@@ -59,7 +61,7 @@
 				<option selected="true" disabled="true" hidden="true" value="">Select...</option>
 				<option value="2018-04-17">04/17/2018</option>
 			</select>	
-				
+
 			<p><input type="submit" value="Start Shopping"/></p>
 		</form> 
 	</div>
