--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -31,7 +31,7 @@
 			</table>
 			<p>
 				<span>Total coupons used: </span>
-				<span th:text="${cart.totalCouponsUsed()}"/>
+				<span th:text="${cart.getCouponsUsed()}"/>
 			</p>
 		</main>
 		<footer th:replace="shopping :: footer"/>
