rearranged user form header

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
-	<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
 	<title>Welcome to BSFP</title>
 	<link rel="stylesheet" type="text/css" href="/css/layout.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
+	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon"/>
+	<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
 	<script type="text/javascript" src="/js/user-form.js"></script>
 </head>
 <body onload="initialize()">
@@ -58,6 +59,7 @@
 			<label for="Yes">Yes</label>
 			<input id="No" type="radio" name="infants" value=""/>
 			<label for="No">No</label>
+
 			<p>Please select a pick up date:</p>
 			<select name="pickUpDate" required="true">
 				<option selected="true" disabled="true" hidden="true" value="">Select...</option>
