renamed initialize method

--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -8,7 +8,7 @@
 	<link rel="icon" href="images\favicon.ico" type="image/x-icon"/>
 	<script type="text/javascript" src="/js/user-form.js"></script>
 </head>
-<body onload="initialize()">
+<body onload="initializeUserForm()">
 	<div class="container">
 		<form action="/user-form">
 			<h1>Welcome to Broad Street Food Pantry</h1>
